// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults value to empty string 1`] = `
Array [
  "",
  Object {},
]
`;

exports[`returns all props needed 1`] = `
Object {
  "props": Object {
    "options": Array [
      Object {
        "label": "label1",
        "value": "value1",
      },
    ],
    "prop1": "prop1",
    "prop2": "prop2",
  },
  "validate": "validateFunction",
}
`;

exports[`sets initial values 1`] = `
Array [
  "selected",
  Object {
    "error": "on",
    "helperText": "the help",
    "label": "the label",
    "optional": false,
    "options": Array [
      Object {
        "label": "label1",
        "value": "value1",
      },
    ],
    "value": "selected",
  },
]
`;

exports[`sets initialValue from form 1`] = `
Array [
  "i am initial",
  Object {
    "error": "on",
    "helperText": "the help",
    "label": "the label",
    "optional": false,
    "options": Array [
      Object {
        "label": "label1",
        "value": "value1",
      },
    ],
    "value": "selected",
  },
]
`;
